src/objects/T_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Recurrence__c</fullName>
        <label>Recurrence</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScheduleEnd__c</fullName>
        <label>ScheduleEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduleStart__c</fullName>
        <label>ScheduleStart</label>
        <type>Date</type>
    </fields>
    <label>T_Schedule</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_Schedules</pluralLabel>
    <recordTypes>
        <fullName>ChauffeursRoutesSchedule</fullName>
        <active>true</active>
        <label>ChauffeursRoutesSchedule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>